# mrtos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.host  README.md
.github/workflows/: ci.yml
app/: main_fr5994.c  mrtos_config.h
bench/: bench.c
cmake/: msp430fr5994.cmake  msp430sim.cmake
doc/: DEBUG.md  POWER.md  VALIDATION.md
doc/manual/: 01-architecture.md  02-api-reference.md  03-port-contract.md  04-msp430-port.md  05-limitations.md  06-build-integration.md  07-verification.md  README.md
kernel/: mrtos.c  mrtos.h
port/msp430fr59xx/: port.c  port.h
port/msp430sim/: port.c  port.h
port/posix/: port.c  port.h
test/: CMakeLists.txt  mrtos_config.h  test_common.h  test_integration.c  test_kernel.c  test_unit_mutex.c  test_unit_queue.c  test_unit_sem.c  test_unit_stack.c  test_unit_task.c  test_unit_tickless.c
test/sim/: mrtos_config.h
tools/: attach_board.sh  bench.py  check_board.sh  env.sh  msp430-gdb.sh  plot_energy.py  run_tests.py  setup_debug_tools.sh  setup_toolchain.sh
